[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-root = "src"
module-name = [
    "effect_ae",
    "effect_auth",
    "effect_consent",
    "effect_dashboard",
    "effect_edc",
    "effect_export",
    "effect_labs",
    "effect_lists",
    "effect_prn",
    "effect_reports",
    "effect_screening",
    "effect_sites",
    "effect_subject",
    "effect_visit_schedule",
]
source-include = ["effect_*/templates/**", "effect_*/locale/**", "locale/**"]
source-exclude = ["effect_*/tests/**", "effect_*/notebooks/**", "tests/**"]
namespace = false


[project]
name = "effect-edc"
version = "1.1.12"
description = "EFFECT Trial EDC (https://www.isrctn.com/ISRCTN30579828)"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12,<3.14"
keywords = [
    "django",
    "clinicedc",
    "EFFECT EDC",
    "EDC",
    "clinical trials",
    "META Trial",
    "ISRCTN30579828",
]
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
    { name = "Jonathan Willitts", email = "j.willitts@ucl.ac.uk" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "clinicedc>=2.0.15",
    "effect-form-validators>=1.1.4",
    "edc-csf>=1.0.0",
    "edc-microbiology>=1.0.0",
    "notebook>=7.4.5",
]


[project.urls]
Homepage = "https://github.com/effect-trial/effect-edc"
# Documentation = "https://effect-edc.readthedocs.io"
Repository = "https://github.com/effect-trial/effect-edc.git"
Changelog = "https://github.com/effect-trial/effect-edc/blob/main/CHANGELOG"

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py312"
exclude = ["migrations", ".tox", ".venv"]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C90",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FURB",
    "I",
    "INT",
    "N",
    "PD",
    "PERF",
    "PL",
    "PLR",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
    # "FIX",
]
ignore = ["DJ008", "DJ007", "DJ006", "COM812", "PLC0206"]

[tool.ruff.lint.per-file-ignores]
    "__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
parallel = false
branch = true
source = ["effect_edc"]


[tool.coverage.paths]
source = ["effect_edc"]


[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["TODO.txt"]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]


[dependency-groups]
lint = ["ruff>=0.12.5"]

test = [
    "clinicedc>=2.0.16",
    "clinicedc-tests>=0.1.5",
    "coverage>=7.10.6",
    "django-webtest>=1.9.13",
    "edc-test-settings>=2.0.0",
    "faker>=37.4.2",
    "model-bakery>=1.20.5",
    "psycopg2>=2.9.10",
    "time-machine>=2.16.0",
]
notebook = [
    "dj-notebook>=0.7.0",
    "great-tables>=0.18.0",
    "matplotlib>=3.10.3",
    "matplotlib-venn>=1.1.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pdfkit>=1.0.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "selenium>=4.34.2",
    "tabulate>=0.9.0",
]

develop = [
    'argon2-cffi',
    'clinicedc',
    'clinicedc-tests',
    'django>=5.2.4,<5.3',
    "django-redis>=6.0.0",
    'django-admin-rangefilter',
    'django-audit-fields',
    'django-crypto-fields',
    'django-db-views',
    'django-environ',
    'django-logentry-admin',
    'django-multisite2',
    'django-pandas',
    'django-revision',
    'django-simple-history',
    'django-storages',
    'edc-csf',
    'edc-dx',
    'edc-dx-review',
    'edc-microbiology',
    'edc-next-appointment',
    'fontawesomefree',
    "ipython>=9.4.0",
    'python-memcached',
    "time-machine>=2.16.0",
    "reportlab>=4.4.3",
]


[tool.uv.sources]
effect-edc = { workspace = true }
effect-form-validators = { path = "../effect-form-validators", editable = true }
clinicedc = { path = "../clinicedc", editable = true }
clinicedc-tests = { path = "../clinicedc-tests", editable = true }
django-audit-fields = { path = "../django-audit-fields", editable = true }
django-crypto-fields = { path = "../django-crypto-fields", editable = true }
django-logentry-admin = { path = "../django-logentry-admin", editable = true }
django-multisite2 = { path = "../django-multisite2", editable = true }
django-revision = { path = "../django-revision", editable = true }
django-simple-history = { path = "../django-simple-history", editable = true }
edc-csf = { path = "../edc-csf", editable = true }
edc-microbiology = { path = "../edc-microbiology", editable = true }
edc-next-appointment = { path = "../edc-next-appointment", editable = true }
