[metadata]
name = effect-edc
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/clinicedc/effect-edc
license = GPL license, see LICENSE
description = EFFECT Trial EDC (http://www.isrctn.com/xxxxx)
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc EFFECT EDC, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.9
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    edc==0.3.74
    edc-microbiology>=0.1.3
    edc-csf>=0.1.3
    beautifulsoup4

    effect_form_validators
dependency_links =
    git+https://github.com/erikvw/django-import-export.git@get_export_admin_action

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    effect_edc.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations,.tox,.git,__pycache__,build,dist,.eggs
per-file-ignores = __init__.py: F401
