[metadata]
name = effect-edc
version = attr: _version
author = Erik van Widenfelt
author_email = ew2789@gmail.com
url = https://github.com/effect-trial/effect-edc
license = GPL license, see LICENSE
description = EFFECT Trial EDC (https://www.isrctn.com/ISRCTN30579828)
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = django edc EFFECT EDC, clinicedc, clinical trials
classifiers=
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)


[options]
python_requires = >=3.11
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    edc==0.5.71
    edc-microbiology==0.3.7
    edc-csf==0.3.6
    beautifulsoup4
    effect-form-validators==0.1.38

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    bin*
    effect_edc.tests*

[flake8]
ignore = E226,W503,E203
max-line-length = 95
max-complexity = 10
exclude = */migrations/*,.tox,.git,__pycache__,build,dist,.eggs,_version.py
per-file-ignores = __init__.py: F401
